# gutenberg

./: .gitignore  MANUAL_DEPLOYMENT.md  MIGRATION_PLAN.md  README.md  SIMPLIFIED_GUIDE.md  __init__.py  amazon_states_language_json_definition.md  cli.py  pyproject.toml  step_by_step_instructions.md
.github/instructions/: gutenberg rules.instructions.md
aws/: README.md  bun.lockb  package.json
aws-infrastructure/: README.md  cdk.json  database-schema.sql  deploy-direct.sh  deploy-minimal-fixed.sh  deploy-minimal.sh  deploy-simplified.sh  deploy.sh  package-lock.json  package.json  simple-infrastructure.yaml
aws/lambda/book_parser/: book_parser.py  requirements.txt
aws/lambda/book_scraper/: book_scraper.py  requirements.txt
aws/lambda/chapter_formatter/: chapter_formatter.py  requirements.txt
aws/lambda/feed_scraper/: feed_scraper.py
lambda-functions/formatter/: index.py
lambda-functions/scraper/: index.py
scripts/: audioBookFormatter.py  audioMerger.py  chapterChunker.py  ttsAgent.py
scripts/scraper/: BOOK_SCRAPER_README.md  bookScraper.py  run_daily_scraper.sh  scraper_state.json  setup_scraper.py
